WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
295191
[JSC] Fix GetButterfly handling in DFG array allocation sinking
https://bugs.webkit.org/show_bug.cgi?id=295191
Summary
[JSC] Fix GetButterfly handling in DFG array allocation sinking
Yijia Huang
Reported
2025-06-29 23:57:25 PDT
<
rdar://154419571
>
Attachments
Add attachment
proposed patch, testcase, etc.
Yijia Huang
Comment 1
2025-06-30 00:02:25 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/47364
Yijia Huang
Comment 2
2025-07-04 00:29:07 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/47530
Yijia Huang
Comment 3
2025-07-07 08:44:41 PDT
The fix PR is:
https://github.com/WebKit/WebKit/pull/47364
EWS
Comment 4
2025-07-08 22:32:46 PDT
Committed
297146@main
(58dd8cd97ec1): <
https://commits.webkit.org/297146@main
> Reviewed commits have been landed. Closing PR #47364 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug