[JSC] Fix GetButterfly handling in DFG array allocation sinking https://bugs.webkit.org/show_bug.cgi?id=295191 rdar://154419571

Reviewed by NOBODY (OOPS!).

DFG's object allocation sinking previously mishandled GetButterfly nodes
when their base arrays were sunk and later materialized. Specifically, when
PutByVal or GetByVal triggered array escape, the corresponding GetButterfly
nodes were not correctly updated to depend on the materialized array, leading
to incorrect butterfly references and potential crashes.

This patch fixes the issue by:

1. Introducing a new Allocation::Kind::ArrayButterfly to model GetButterfly as
   a dependent allocation.
2. Adding ArrayButterflyPropertyPLoc to track butterfly-to-array relationships.
3. Implementing fixGetButterflyEscapees() to synchronize escape status between
   arrays and their butterflies.
4. Enforcing materialization ordering to ensure arrays materialize before their
   GetButterfly uses.
5. Updating GetButterfly lowering to depend on the correct materialized array.

This fix ensures that GetButterfly correctly accesses the butterfly of
materialized arrays.